--- a/signin.pug
+++ b/signin.pug
@@ -1,13 +1,13 @@
 extends index.pug
 block content 
     link(rel='stylesheet' href='../static/style2.css')
-    .d-flex.justify-content-center.my-5
-        form.row.g-3.container#contactform(style='max-width: 500px;' action='/signin' method="POST")
+    .d-flex.justify-content-center.my-5#signupform
+        form.row.g-3.container#contactform(style='max-width: 500px; height:400px;' action='/signin' method="POST")
             .col-md-12
                 label.form-label(for='inputEmail4') Email
-                input#inputEmail4.form-control(type='email' name='email')
+                input#inputEmail4.form-control(type='email' style='color:black;' name='email')
             .col-md-12
                 label.form-label(for='inputPassword4') Password
-                input#inputPassword4.form-control(type='password' name='password')
-            button.btn.btn-primary#signupbtn(type='submit' style='max-width:100px;') Sign in
+                input#inputPassword4.form-control(type='password' style='color:black;' name='password')
+            button.btn.btn-outline-primary#signupbtn(type='submit' style='max-width:100px; max-height:40px;') Sign in
 
