--- a/signup.pug
+++ b/signup.pug
@@ -1,25 +1,25 @@
 extends index.pug
 block content 
     link(rel='stylesheet' href='../static/style2.css')
-    .d-flex.justify-content-center.my-5
+    .d-flex.justify-content-center.my-5#signupform
         form.row.g-3.container#contactform(style='max-width: 500px;' action='/signup/upload' method="POST" enctype='multipart/form-data')
             .col-md-12
                 label.form-label(for='profilePic') Profile Pic
-                input.form-control(type='file' name='profilePic' required='')
+                input.form-control(type='file' name='profilePic' style='color:black;' required='')
             .col-md-12
                 label.form-label(for='inputEmail4') Email
-                input#inputEmail4.form-control(type='email' name='email' required='')
+                input#inputEmail4.form-control(type='email' style='color:black;' name='email' required='')
             .col-md-12
                 label.form-label(for='inputPassword4') Password
-                input#inputPassword4.form-control(type='password' name='password' required='')
+                input#inputPassword4.form-control(type='password' name='password' style='color:black;' required='')
             #username.col-md-12f
                 label.form-label(for='inputUserName' required='') Username
-                input#inputUserName.form-control(type='text' name='username' oninput ='check()')
+                input#inputUserName.form-control(type='text' style='color:black;' name='username' oninput ='check()')
                 #checkuser 
             .col-12
                 .form-check
                     input#gridCheck.form-check-input(type='checkbox')
                     label.form-check-label(for='gridCheck')
                     | Check In
-                button.btn.btn-primary#signupbtn(type='submit' style='max-width: 100px;') Sign up
+                button.btn.btn-outline-primary#signupbtn(type='submit' style='max-width: 100px;') Sign up
 
