--- a/index.pug
+++ b/index.pug
@@ -60,5 +60,6 @@ body
             a.text-muted(href='#')
                 img(src='/static/js.png' alt='....' height='20px')
 
+    block script
 script(src='../static/project.js')
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js', integrity='sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2', crossorigin='anonymous')
