--- a/index.pug
+++ b/index.pug
@@ -5,6 +5,8 @@ head
   title JBlogs-Best Blogging Website
   link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor' crossorigin='anonymous')
   link(rel='stylesheet' href='../static/style.css')
+
+block style
 body 
 
     nav.navbar.navbar-expand-lg.bg-dark.navbar-dark
@@ -17,9 +19,9 @@ body
             li.nav-item
               a.nav-link.active(aria-current='page', href='/') Home
             li.nav-item
-              a.nav-link(href='/signup') Get Registered
+              a.nav-link(href='/user/signup') Get Registered
             li.nav-item
-              a.nav-link#profile(href='/signin') My Profile
+              a.nav-link#profile(href='/user/signin') My Profile
             
             li.nav-item.dropdown
                 a#navbarDropdown.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
@@ -34,12 +36,12 @@ body
                     li
                         a.dropdown-item(href='#') Something else here
           
-          form.d-flex(role='search')
+          form.d-flex.mb-2.mr-2(role='search')
             input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
             button.btn.btn-outline-success(type='submit') Search
-          a.btn.btn-outline-primary.mx-2#signbtn(href='/signin') Sign in
-          a.btn.btn-outline-primary.mx-2#logbtn(href='/logout') Logout
-          #usersection
+          a.btn.btn-outline-primary.mb-2#signbtn(href='/user/signin') Sign in
+          a.btn.btn-outline-primary.mb-2#logbtn(href='/user/logout') Logout
+          #usersection.my-2.ml-2
           
           
     block content 
@@ -49,16 +51,16 @@ body
         .col-md-6.d-flex.align-items-center.col-12
             a.mb-3.me-2.mb-md-0.text-muted.text-decoration-none.lh-1(href='/')
             span.mb-3.mb-md-0.text-muted &copy; 2022 Company, Inc
-        ul.nav.col-md-6.justify-content-md-end.list-unstyled.d-flex.flex-wrap-justify-content-sm-between.col-12
-            li.ms-3.mx-5
-            a.text-muted(href='#')
-                img(src='/static/py.webp' alt='....' height='20px')
-            li.ms-3.mx-5
-            a.text-muted(href='#')
-                img(src='/static/c++.png' alt='....' height='20px')
-            li.ms-3.mx-5
-            a.text-muted(href='#')
-                img(src='/static/js.png' alt='....' height='20px')
+        //- ul.nav.col-md-6.justify-content-md-end.list-unstyled.d-flex.flex-wrap-justify-content-sm-between.col-12
+            //- li.ms-3.mx-5
+            //- a.text-muted(href='#')
+            //-     img(src='/static/py.webp' alt='....' height='20px')
+            //- li.ms-3.mx-5
+            //- a.text-muted(href='#')
+            //-     img(src='/static/c++.png' alt='....' height='20px')
+            //- li.ms-3.mx-5
+            //- a.text-muted(href='#')
+            //-     img(src='/static/js.png' alt='....' height='20px')
 
     block script
 script(src='../static/project.js')
