--- a/signuptemplate.pug
+++ b/signuptemplate.pug
@@ -10,10 +10,10 @@ block content
           img#profilepic(src=`${user.avatar}`, alt='...' , style='height:250px; min-width:70px; max-width:250px;')
           #smallbox.mx-2.d-flex.flex-column
               ul.list-group.list-group-flush
-                li.list-group-item Username: #{user.username}
+                li.list-group-item#username Username: #{user.username}
                 li.list-group-item Email : #{user.email}
 
-      a.btn.btn-primary.m-5(href='/users/newblog') Creat A Blog
+      a.btn.btn-primary.m-5(href='/user/newblog') Creat A Blog
 
       //- #blogsdiv
 
