--- a/home.pug
+++ b/home.pug
@@ -1,6 +1,8 @@
 extends index.pug
 
 block content
+  div.typewriter
+    h1 Welcome
   #home
     h3.mt-4.text-center Recent Blogs
     #cardbox.d-flex.flex-row.flex-wrap(style='min-width: 240px;')
