--- a/index.pug
+++ b/index.pug
@@ -43,9 +43,11 @@ body
           a.btn.btn-outline-primary.mb-2#logbtn(href='/user/logout') Logout
           #usersection.my-2.ml-2
           
-          
+
+    block message 
     block content 
-    block content2 
+    block content2
+   
     footer.d-flex.flex-wrap.justify-content-between.align-items-center.py-3.my-4.border
 
         .col-md-6.d-flex.align-items-center.col-12
