--- a/newblog.pug
+++ b/newblog.pug
@@ -3,7 +3,7 @@ extends index.pug
 block style 
    link(rel='stylesheet' href='../static/blog.css')
 
-
+   link(rel='stylesheet' href='../static/creatblog.css')
 block content
     
     .d-flex.justify-content-center.my-2(style="width:100%;")
@@ -26,6 +26,7 @@ block content
                    
             a.btn.btn-primary.mx-2.my-1#headbtn(style='width:120px') Add Heading
             a.btn.btn-primary.mx-2.my-1#parabtn(style='width:120px')  Add Text
+            a.btn.btn-primary.mx-2.my-1#imgbtn(style='width:120px')  Add Image
             button.btn.btn-primary.mx-2.my-1#creatbtn(style='width:120px')  Creat
 
     
