--- a/blog.pug
+++ b/blog.pug
@@ -12,7 +12,7 @@ block content
     #blogbox.d-flex.flex-row(syle="background-color: #ececdd;")    
       .card.d-flex.justify-content-center.flex-column#myblog.my-4(style='background-color: #f0f0e1;border:0px;')
         h1(style="font-family: 'Oswald', sans-serif;text-align:center; background-color:#212529; color:white;padding:24px;" ) #{blog.title}
-        img(src=`${blog.image}`, alt='...' style='max-height:65vh; width:100%; object-fit:contain;')
+        img(src=`${blog.image[0]}`, alt='...' style='max-height:65vh; width:100%; object-fit:contain;')
         .card-body
           //- p.card-text(style="font-family: 'Edu SA Beginner', cursive;font-size: 1.4rem;font-weight: 400;") #{blog.text}
           #get(style='display:none') #{blog.getid}
@@ -21,7 +21,8 @@ block content
           ul.my-3 
            li(style="list-style:none;")
            h3 Blog Details-
-           li Username: #{blog.username}
+           li 
+            a(href=`/user?username=${blog.username}` style="text-decoration:none;") Username: #{blog.username}
            li.text-wrap posted at- #{new Date(Number(blog.getid.split(blog.username)[1]))}
 
 
