--- a/home.pug
+++ b/home.pug
@@ -6,8 +6,8 @@ block content
   #home
     h3.mt-4.text-center Recent Blogs
     #cardbox.d-flex.flex-row.flex-wrap(style='min-width: 240px;')
-    .d-flex.justify-content-center#next 
-      button.btn-outnline-primary Next
+    .d-flex.justify-content-center
+      button.btn-outnline-primary#next Next
       button.btn-outnline-primary#prev Prev
 block script
   script(src='../static/Home.js')
