--- a/home.pug
+++ b/home.pug
@@ -5,7 +5,7 @@ block content
     h1 Welcome
   #home
     h3.mt-4.text-center Recent Blogs
-    #cardbox.d-flex.flex-row.flex-wrap(style='min-width: 240px;')
+    #cardbox.d-flex.flex-row.flex-wrap
     .d-flex.justify-content-center
       button.btn-outnline-primary#next Next
       button.btn-outnline-primary#prev Prev
