--- a/index.pug
+++ b/index.pug
@@ -36,9 +36,12 @@ body
                     li
                         a.dropdown-item(href='#') Something else here
           
-          form.d-flex.mb-2.mr-2(role='search')
-            input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
-            button.btn.btn-outline-success(type='submit') Search
+          form.d-flex.mb-2.mr-2.d-flex.flex-column(role='search' method="GET", action="/search")
+            div.d-flex.flex-row
+              input.form-control.me-2(type='search', placeholder='Search',oninput="search(event)", 
+              onblur = 'hide()' style="max-width:222px",aria-label='Search')
+              button.btn.btn-outline-success(type='submit') Search
+            #searchlist
           a.btn.btn-outline-primary.mb-2#signbtn(href='/user/signin') Sign in
           a.btn.btn-outline-primary.mb-2#logbtn(href='/user/logout') Logout
           #usersection.my-2.ml-2
