--- a/blog.pug
+++ b/blog.pug
@@ -15,7 +15,7 @@ block content
   
           #get(style='display:none') #{blog.getid}
       .card#userCard.my-3.d-flex
-          img(src=`${blog.avatar}`, alt='...' , style='height:250px; min-width:70px; max-width:250px;')
+          img(src=`${blog.avatar}`, alt='...' , style='min-width:70px; max-width:250px;')
           ul.my-3 
            li(style="list-style:none;")
            h3 Blog Details-
